--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>XYLENEX SIA — ExamHero on Google Play</title>
+    <title>ExamHero — XYLENEX SIA</title>
+
     <meta
       name="description"
-      content="XYLENEX SIA (Google Play Developer ID: 5097653683382524442) — ExamHero is a tactical focus timer and study OS for students. Download on Google Play."
+      content="ExamHero by XYLENEX SIA — a tactical focus timer & study OS for students. Download on Google Play."
     />
     <meta name="theme-color" content="#0b1220" />
 
@@ -47,7 +48,7 @@
             <p class="badge">Google Play Developer</p>
             <h1>ExamHero is live on Google Play.</h1>
             <p class="lead">
-              A tactical focus timer and study OS for students — stay locked in, rank up, and crush exams.
+              A dark, tactical focus timer & study OS for students — run focus missions, rank up, and crush exams.
             </p>
 
             <div class="cta">
@@ -57,7 +58,7 @@
                 target="_blank"
                 rel="noopener"
               >
-                Download ExamHero
+                Get ExamHero on Google Play
               </a>
               <a class="btn ghost" href="#examhero">See features</a>
             </div>
@@ -78,29 +79,42 @@
             </p>
           </div>
 
-          <!-- ExamHero banner card -->
+          <!-- APP CARD -->
           <div class="hero-card">
-            <div class="coming-banner">
-              <span class="coming-label">🎯 ExamHero</span>
-              <h2>Stealth Focus for Students</h2>
-              <p class="coming-text">
-                Study like it’s a mission: Pomodoro/Deep Focus sessions, syllabus tracking, XP ranks, tasks,
-                private notes, and optional leaderboard sync.
+            <div class="app-banner">
+              <div class="app-top">
+                <span class="app-label">🎯 ExamHero</span>
+                <span class="app-sub-label">Student Focus System</span>
+              </div>
+
+              <h2>Study like it’s a mission.</h2>
+              <p class="app-text">
+                Stealth / sci-fi productivity built for students who want discipline — not cute motivation.
               </p>
-              <p class="coming-sub">
-                Available now on Google Play.
-              </p>
-              <div class="coming-actions">
+
+              <div class="chips">
+                <span class="chip">⚡ Deep Focus</span>
+                <span class="chip">🏅 XP & Ranks</span>
+                <span class="chip">🗺️ War Room</span>
+                <span class="chip">✅ Tasks</span>
+                <span class="chip">🗒️ Notes</span>
+              </div>
+
+              <div class="app-actions">
                 <a
                   href="https://play.google.com/store/apps/details?id=com.xylenexsia.examhero"
                   class="btn"
                   target="_blank"
                   rel="noopener"
                 >
-                  Get it on Google Play
+                  Install Now
                 </a>
-                <a href="#privacy" class="btn ghost">Privacy Policy</a>
+                <a href="#privacy" class="btn ghost">Privacy</a>
               </div>
+
+              <p class="muted small" style="margin: 14px 0 0;">
+                Package: <strong>com.xylenexsia.examhero</strong>
+              </p>
             </div>
           </div>
         </div>
@@ -112,64 +126,65 @@
           <div class="section-head">
             <h2>ExamHero</h2>
             <p class="muted">
-              A dark, serious, “Black Ops” productivity system built for students.
+              Tactical focus + study planning with progression. Built for students, dark-mode by default.
             </p>
           </div>
 
           <div class="two-col">
             <div class="info">
-              <h3>Key features</h3>
+              <h3>What it does</h3>
               <ul class="bullets">
                 <li><strong>Focus Timer</strong> (Pomodoro / Deep Focus)</li>
                 <li><strong>War Room</strong> syllabus tracking</li>
-                <li><strong>XP & Ranks</strong> gamification</li>
+                <li><strong>XP & Ranks</strong> progression system</li>
                 <li><strong>Task list</strong> for daily execution</li>
-                <li><strong>Private notes</strong> + camera notepad</li>
+                <li><strong>Private notes</strong> + camera notepad (optional)</li>
                 <li><strong>Optional leaderboard sync</strong></li>
               </ul>
 
               <div class="note">
-                <strong>Download:</strong>
+                <strong>Google Play:</strong>
                 <a
                   href="https://play.google.com/store/apps/details?id=com.xylenexsia.examhero"
                   target="_blank"
                   rel="noopener"
                 >
-                  ExamHero on Google Play
+                  View ExamHero listing
                 </a>
               </div>
-            </div>
 
-            <div class="info">
-              <h3>App details</h3>
-              <ul class="list">
-                <li><span>App name</span><strong>ExamHero</strong></li>
-                <li><span>Package</span><strong>com.xylenexsia.examhero</strong></li>
-                <li>
-                  <span>Google Play</span>
-                  <strong>
-                    <a
-                      href="https://play.google.com/store/apps/details?id=com.xylenexsia.examhero"
-                      target="_blank"
-                      rel="noopener"
-                    >
-                      View listing
-                    </a>
-                  </strong>
-                </li>
-                <li><span>Support email</span><strong><a href="mailto:contact@xylenexdev.com">contact@xylenexdev.com</a></strong></li>
-              </ul>
-
-              <div style="margin-top: 16px;">
+              <div style="margin-top: 14px;">
                 <a
                   class="btn"
                   href="https://play.google.com/store/apps/details?id=com.xylenexsia.examhero"
                   target="_blank"
                   rel="noopener"
                 >
-                  Install ExamHero
+                  Download ExamHero
                 </a>
                 <a class="btn ghost" href="#contact">Support</a>
+              </div>
+            </div>
+
+            <div class="info">
+              <h3>Quick details</h3>
+              <ul class="list">
+                <li><span>App</span><strong>ExamHero</strong></li>
+                <li><span>Package</span><strong>com.xylenexsia.examhero</strong></li>
+                <li><span>Developer</span><strong>XYLENEX SIA</strong></li>
+                <li><span>Support</span><strong><a href="mailto:contact@xylenexdev.com">contact@xylenexdev.com</a></strong></li>
+                <li>
+                  <span>Privacy URL</span>
+                  <strong><a href="https://xylenexdev.com/apps/examhero/privacypolicy/" target="_blank" rel="noopener">ExamHero Privacy Policy</a></strong>
+                </li>
+              </ul>
+
+              <div class="card" style="margin-top: 14px;">
+                <h3 style="margin-top:0;">Human description</h3>
+                <p class="muted" style="margin-bottom:0;">
+                  ExamHero turns studying into a quiet mission: start a session, complete tasks, and watch your progress
+                  build like XP — less noise, more control.
+                </p>
               </div>
             </div>
           </div>
@@ -191,262 +206,3 @@
               <h3>Company details</h3>
               <ul class="list">
                 <li><span>Legal name</span><strong>XYLENEX SIA</strong></li>
-                <li><span>Developer name</span><strong>XYLENEX SIA</strong></li>
-                <li><span>Developer ID</span><strong>5097653683382524442</strong></li>
-                <li>
-                  <span>Address</span>
-                  <strong>Mazā Smilšu iela 8, Centra rajons, Rīga, LV-1050</strong>
-                </li>
-                <li><span>Phone</span><strong><a href="tel:+37126205676">+371 26205676</a></strong></li>
-                <li>
-                  <span>Email</span>
-                  <strong><a href="mailto:contact@xylenexdev.com">contact@xylenexdev.com</a></strong>
-                </li>
-                <li>
-                  <span>Website</span>
-                  <strong><a href="https://xylenexdev.com" target="_blank" rel="noopener">xylenexdev.com</a></strong>
-                </li>
-              </ul>
-            </div>
-
-            <div class="info">
-              <h3>What you can expect</h3>
-              <ul class="bullets">
-                <li>Clear and simple user experience</li>
-                <li>Fast support via email</li>
-                <li>Ongoing improvements and updates</li>
-              </ul>
-
-              <div class="note">
-                <strong>Tip:</strong> If Google Play asks for a developer website,
-                this page includes identity, contact details, and policies in one place.
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- CONTACT -->
-      <section id="contact" class="section alt">
-        <div class="container">
-          <div class="section-head">
-            <h2>Contact Us</h2>
-            <p class="muted">For support, partnerships, or business inquiries.</p>
-          </div>
-
-          <div class="contact-grid">
-            <div class="card">
-              <h3>Company</h3>
-              <p><strong>XYLENEX SIA</strong></p>
-              <p class="muted">Google Play Developer ID: 5097653683382524442</p>
-            </div>
-
-            <div class="card">
-              <h3>Email</h3>
-              <p><a href="mailto:contact@xylenexdev.com">contact@xylenexdev.com</a></p>
-              <p class="muted">We usually reply within 1–2 business days.</p>
-            </div>
-
-            <div class="card">
-              <h3>Phone</h3>
-              <p><a href="tel:+37126205676">+371 26205676</a></p>
-              <p class="muted">Available during standard business hours.</p>
-            </div>
-
-            <div class="card">
-              <h3>Address</h3>
-              <p>
-                Mazā Smilšu iela 8<br />
-                Centra rajons, Rīga<br />
-                LV-1050, Latvia
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- PRIVACY -->
-      <section id="privacy" class="section">
-        <div class="container">
-          <div class="section-head">
-            <h2>Privacy Policy</h2>
-            <p class="muted">
-              This Privacy Policy applies to applications and services published by XYLENEX SIA
-              (Google Play Developer ID: 5097653683382524442).
-            </p>
-          </div>
-
-          <div class="policy">
-            <h3>1. Introduction</h3>
-            <p>
-              XYLENEX SIA ("we", "our", or "us") operates mobile applications published on Google Play.
-              This Privacy Policy explains how we collect, use, and protect information when you use our apps
-              or visit our website.
-            </p>
-
-            <h3>2. Information We Collect</h3>
-            <p>Depending on the app, we may collect the following types of information:</p>
-            <ul class="bullets">
-              <li>Basic technical information such as device type, OS version, and app version</li>
-              <li>Anonymous usage data and diagnostics</li>
-              <li>Advertising identifiers (if ads are enabled)</li>
-              <li>Information you provide when contacting us by email</li>
-            </ul>
-
-            <h3>3. How We Use Information</h3>
-            <p>We use collected data to:</p>
-            <ul class="bullets">
-              <li>Operate and improve our applications</li>
-              <li>Fix bugs and improve performance</li>
-              <li>Provide customer support</li>
-              <li>Comply with legal obligations</li>
-            </ul>
-
-            <h3>4. Third-Party Services</h3>
-            <p>
-              Our apps may use third-party services provided by Google or other partners that may collect
-              information used to identify you. These may include:
-            </p>
-            <ul class="bullets">
-              <li>Google Play Services</li>
-              <li>Google Analytics for Firebase</li>
-              <li>Google AdMob (if applicable)</li>
-            </ul>
-            <p>These services have their own privacy policies governing how they use data.</p>
-
-            <h3>5. Data Security</h3>
-            <p>
-              We take reasonable measures to protect your information. However, no method of transmission
-              over the internet or electronic storage is 100% secure.
-            </p>
-
-            <h3>6. Children’s Privacy</h3>
-            <p>
-              Our apps are not intended for children under the age of 13 unless explicitly stated.
-              We do not knowingly collect personal data from children.
-            </p>
-
-            <h3>7. Changes to This Policy</h3>
-            <p>
-              We may update this Privacy Policy from time to time. Any changes will be posted on this page.
-            </p>
-
-            <h3>8. Contact Us</h3>
-            <p>If you have questions about this Privacy Policy, contact us at:</p>
-            <p>
-              <strong>XYLENEX SIA</strong><br />
-              Mazā Smilšu iela 8, Centra rajons, Rīga, LV-1050<br />
-              Email: <a href="mailto:contact@xylenexdev.com">contact@xylenexdev.com</a><br />
-              Phone: +371 26205676
-            </p>
-
-            <p class="muted small">Last updated: <span id="privacyUpdated"></span></p>
-          </div>
-        </div>
-      </section>
-
-      <!-- TERMS -->
-      <section id="terms" class="section alt">
-        <div class="container">
-          <div class="section-head">
-            <h2>Terms of Service</h2>
-            <p class="muted">These Terms govern your use of applications and services provided by XYLENEX SIA.</p>
-          </div>
-
-          <div class="policy">
-            <h3>1. Acceptance of Terms</h3>
-            <p>
-              By downloading or using any application published by XYLENEX SIA, you agree to be bound by these Terms.
-              If you do not agree, please do not use our services.
-            </p>
-
-            <h3>2. Use of Our Applications</h3>
-            <p>
-              You agree to use our apps only for lawful purposes and in accordance with applicable laws.
-              You must not misuse, reverse engineer, or attempt to disrupt our services.
-            </p>
-
-            <h3>3. Intellectual Property</h3>
-            <p>
-              All content, trademarks, logos, and software associated with our apps are the property of
-              XYLENEX SIA unless otherwise stated. Unauthorized use is prohibited.
-            </p>
-
-            <h3>4. Third-Party Services</h3>
-            <p>
-              Our applications may include third-party SDKs or services. We are not responsible for the
-              content or practices of these third parties.
-            </p>
-
-            <h3>5. Disclaimer</h3>
-            <p>
-              Our apps are provided “as is” without warranties of any kind. We do not guarantee that
-              the services will be error-free or uninterrupted.
-            </p>
-
-            <h3>6. Limitation of Liability</h3>
-            <p>
-              To the maximum extent permitted by law, XYLENEX SIA shall not be liable for any indirect,
-              incidental, or consequential damages arising from your use of our applications.
-            </p>
-
-            <h3>7. Changes to These Terms</h3>
-            <p>
-              We may update these Terms from time to time. Continued use of our apps after updates
-              means you accept the revised Terms.
-            </p>
-
-            <h3>8. Contact</h3>
-            <p>For questions regarding these Terms, contact us:</p>
-            <p>
-              <strong>XYLENEX SIA</strong><br />
-              Mazā Smilšu iela 8, Centra rajons, Rīga, LV-1050<br />
-              Email: <a href="mailto:contact@xylenexdev.com">contact@xylenexdev.com</a><br />
-              Phone: +371 26205676
-            </p>
-
-            <p class="muted small">Last updated: <span id="termsUpdated"></span></p>
-          </div>
-        </div>
-      </section>
-    </main>
-
-    <!-- FOOTER -->
-    <footer class="footer">
-      <div class="container footer-grid">
-        <div>
-          <div class="brand footer-brand">
-            <span class="logo" aria-hidden="true">X</span>
-            <span class="brand-text">XYLENEX SIA</span>
-          </div>
-          <p class="muted">
-            Developer website for apps published by XYLENEX SIA (Google Play Developer ID: 5097653683382524442).
-          </p>
-        </div>
-
-        <div class="footer-links">
-          <a href="#examhero">ExamHero</a>
-          <a href="#about">About</a>
-          <a href="#contact">Contact</a>
-          <a href="#privacy">Privacy</a>
-          <a href="#terms">Terms</a>
-        </div>
-
-        <div class="muted small right">
-          © <span id="year"></span> XYLENEX SIA<br />
-          Mazā Smilšu iela 8, Centra rajons, Rīga, LV-1050<br />
-          Phone: +371 26205676<br />
-          Email: <a href="mailto:contact@xylenexdev.com">contact@xylenexdev.com</a><br />
-          Website: <a href="https://xylenexdev.com" target="_blank" rel="noopener">xylenexdev.com</a>
-        </div>
-      </div>
-    </footer>
-
-    <script>
-      const today = new Date().toLocaleDateString();
-      document.getElementById("year").textContent = new Date().getFullYear();
-      document.getElementById("privacyUpdated").textContent = today;
-      document.getElementById("termsUpdated").textContent = today;
-    </script>
-  </body>
-</html>
