--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>ExamHero — XYLENEX SIA</title>
+    <title>XYLENEX SIA — ExamHero & Developer Policies</title>
 
     <meta
       name="description"
-      content="ExamHero by XYLENEX SIA — a tactical focus timer & study OS for students. Download on Google Play."
+      content="XYLENEX SIA (Google Play Developer ID: 5097653683382524442). Official developer website with contact info, website privacy policy, website terms of service, and app policy links."
     />
     <meta name="theme-color" content="#0b1220" />
 
@@ -34,8 +34,8 @@
           <a href="#examhero">ExamHero</a>
           <a href="#about">About</a>
           <a href="#contact">Contact</a>
-          <a href="#privacy">Privacy</a>
-          <a href="#terms">Terms</a>
+          <a href="#developer-privacy">Privacy</a>
+          <a href="#developer-terms">Terms</a>
         </nav>
       </div>
     </header>
@@ -48,7 +48,8 @@
             <p class="badge">Google Play Developer</p>
             <h1>ExamHero is live on Google Play.</h1>
             <p class="lead">
-              A dark, tactical focus timer & study OS for students — run focus missions, rank up, and crush exams.
+              XYLENEX SIA publishes serious, high-contrast mobile apps. ExamHero is our tactical focus timer & study OS
+              built for students.
             </p>
 
             <div class="cta">
@@ -60,7 +61,7 @@
               >
                 Get ExamHero on Google Play
               </a>
-              <a class="btn ghost" href="#examhero">See features</a>
+              <a class="btn ghost" href="#developer-privacy">Developer Privacy</a>
             </div>
 
             <div class="mini">
@@ -89,13 +90,13 @@
 
               <h2>Study like it’s a mission.</h2>
               <p class="app-text">
-                Stealth / sci-fi productivity built for students who want discipline — not cute motivation.
+                Deep focus sessions, XP ranks, tasks, and private notes — designed for students who want discipline.
               </p>
 
               <div class="chips">
                 <span class="chip">⚡ Deep Focus</span>
                 <span class="chip">🏅 XP & Ranks</span>
-                <span class="chip">🗺️ War Room</span>
+                <span class="chip">🗺️ Syllabus</span>
                 <span class="chip">✅ Tasks</span>
                 <span class="chip">🗒️ Notes</span>
               </div>
@@ -109,7 +110,7 @@
                 >
                   Install Now
                 </a>
-                <a href="#privacy" class="btn ghost">Privacy</a>
+                <a href="#examhero" class="btn ghost">Details</a>
               </div>
 
               <p class="muted small" style="margin: 14px 0 0;">
@@ -120,19 +121,19 @@
         </div>
       </section>
 
-      <!-- EXAMHERO SECTION -->
+      <!-- EXAMHERO -->
       <section id="examhero" class="section alt">
         <div class="container">
           <div class="section-head">
             <h2>ExamHero</h2>
             <p class="muted">
-              Tactical focus + study planning with progression. Built for students, dark-mode by default.
+              Tactical focus + study planning with progression. Dark-mode by default.
             </p>
           </div>
 
           <div class="two-col">
             <div class="info">
-              <h3>What it does</h3>
+              <h3>Key features</h3>
               <ul class="bullets">
                 <li><strong>Focus Timer</strong> (Pomodoro / Deep Focus)</li>
                 <li><strong>War Room</strong> syllabus tracking</li>
@@ -167,23 +168,35 @@
             </div>
 
             <div class="info">
-              <h3>Quick details</h3>
+              <h3>ExamHero policy links</h3>
+              <p class="muted">
+                ExamHero has its own app-specific policy pages (separate from this website’s general policies):
+              </p>
               <ul class="list">
-                <li><span>App</span><strong>ExamHero</strong></li>
-                <li><span>Package</span><strong>com.xylenexsia.examhero</strong></li>
-                <li><span>Developer</span><strong>XYLENEX SIA</strong></li>
-                <li><span>Support</span><strong><a href="mailto:contact@xylenexdev.com">contact@xylenexdev.com</a></strong></li>
                 <li>
-                  <span>Privacy URL</span>
-                  <strong><a href="https://xylenexdev.com/apps/examhero/privacypolicy/" target="_blank" rel="noopener">ExamHero Privacy Policy</a></strong>
+                  <span>ExamHero Privacy</span>
+                  <strong>
+                    <a
+                      href="https://xylenexdev.com/apps/examhero/privacypolicy/"
+                      target="_blank"
+                      rel="noopener"
+                    >
+                      Open privacy policy
+                    </a>
+                  </strong>
+                </li>
+                <!-- Add your ExamHero terms URL later if you create it -->
+                <li>
+                  <span>ExamHero Terms</span>
+                  <strong class="muted">Coming soon (optional)</strong>
                 </li>
               </ul>
 
               <div class="card" style="margin-top: 14px;">
-                <h3 style="margin-top:0;">Human description</h3>
+                <h3 style="margin-top:0;">Short human description</h3>
                 <p class="muted" style="margin-bottom:0;">
                   ExamHero turns studying into a quiet mission: start a session, complete tasks, and watch your progress
-                  build like XP — less noise, more control.
+                  stack up like XP — less noise, more control.
                 </p>
               </div>
             </div>
@@ -206,3 +219,268 @@
               <h3>Company details</h3>
               <ul class="list">
                 <li><span>Legal name</span><strong>XYLENEX SIA</strong></li>
+                <li><span>Developer name</span><strong>XYLENEX SIA</strong></li>
+                <li><span>Developer ID</span><strong>5097653683382524442</strong></li>
+                <li>
+                  <span>Address</span>
+                  <strong>Mazā Smilšu iela 8, Centra rajons, Rīga, LV-1050</strong>
+                </li>
+                <li><span>Phone</span><strong><a href="tel:+37126205676">+371 26205676</a></strong></li>
+                <li>
+                  <span>Email</span>
+                  <strong><a href="mailto:contact@xylenexdev.com">contact@xylenexdev.com</a></strong>
+                </li>
+                <li>
+                  <span>Website</span>
+                  <strong><a href="https://xylenexdev.com" target="_blank" rel="noopener">xylenexdev.com</a></strong>
+                </li>
+              </ul>
+            </div>
+
+            <div class="info">
+              <h3>What you can expect</h3>
+              <ul class="bullets">
+                <li>Clear and simple user experience</li>
+                <li>Fast support via email</li>
+                <li>Ongoing improvements and updates</li>
+              </ul>
+
+              <div class="note">
+                <strong>Note:</strong> This website provides developer identity, contact info, and website-level policies.
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- CONTACT -->
+      <section id="contact" class="section alt">
+        <div class="container">
+          <div class="section-head">
+            <h2>Contact Us</h2>
+            <p class="muted">For support, partnerships, or business inquiries.</p>
+          </div>
+
+          <div class="contact-grid">
+            <div class="card">
+              <h3>Company</h3>
+              <p><strong>XYLENEX SIA</strong></p>
+              <p class="muted">Google Play Developer ID: 5097653683382524442</p>
+            </div>
+
+            <div class="card">
+              <h3>Email</h3>
+              <p><a href="mailto:contact@xylenexdev.com">contact@xylenexdev.com</a></p>
+              <p class="muted">We usually reply within 1–2 business days.</p>
+            </div>
+
+            <div class="card">
+              <h3>Phone</h3>
+              <p><a href="tel:+37126205676">+371 26205676</a></p>
+              <p class="muted">Available during standard business hours.</p>
+            </div>
+
+            <div class="card">
+              <h3>Address</h3>
+              <p>
+                Mazā Smilšu iela 8<br />
+                Centra rajons, Rīga<br />
+                LV-1050, Latvia
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- DEVELOPER / WEBSITE PRIVACY POLICY -->
+      <section id="developer-privacy" class="section">
+        <div class="container">
+          <div class="section-head">
+            <h2>Privacy Policy (Website & Developer)</h2>
+            <p class="muted">
+              This policy describes how XYLENEX SIA handles information on this website and in connection with developer
+              support, communications, and general services. (App-specific policies may exist separately.)
+            </p>
+          </div>
+
+          <div class="policy">
+            <h3>1. Who we are</h3>
+            <p>
+              <strong>XYLENEX SIA</strong> (“we”, “our”, “us”) operates this website and publishes mobile applications on
+              Google Play.
+            </p>
+
+            <h3>2. What this policy covers</h3>
+            <p>
+              This policy applies to:
+            </p>
+            <ul class="bullets">
+              <li>This website (xylenexdev.com)</li>
+              <li>Messages you send us (support/business inquiries)</li>
+              <li>Developer communications related to our apps</li>
+            </ul>
+            <p class="muted small">
+              Some apps may have their own privacy policy pages. For example, ExamHero’s privacy policy is available at:
+              <a href="https://xylenexdev.com/apps/examhero/privacypolicy/" target="_blank" rel="noopener">
+                xylenexdev.com/apps/examhero/privacypolicy/
+              </a>
+            </p>
+
+            <h3>3. Information we collect</h3>
+            <p>
+              We may collect the following information when you use this website or contact us:
+            </p>
+            <ul class="bullets">
+              <li><strong>Contact information</strong> (e.g., email address) if you email us</li>
+              <li><strong>Message content</strong> you send for support or business inquiries</li>
+              <li><strong>Basic technical data</strong> typically included in web requests (e.g., IP address, browser type) via standard server logs</li>
+            </ul>
+
+            <h3>4. How we use information</h3>
+            <ul class="bullets">
+              <li>To respond to inquiries and provide support</li>
+              <li>To operate and secure this website</li>
+              <li>To comply with legal obligations</li>
+            </ul>
+
+            <h3>5. Sharing</h3>
+            <p>
+              We do not sell your personal information. We may share information only when needed to:
+            </p>
+            <ul class="bullets">
+              <li>Provide support (e.g., internal processing)</li>
+              <li>Comply with legal requirements</li>
+              <li>Protect against abuse, fraud, or security issues</li>
+            </ul>
+
+            <h3>6. Data retention</h3>
+            <p>
+              We keep support messages only as long as necessary to respond and maintain records for operational or legal
+              purposes.
+            </p>
+
+            <h3>7. Your rights</h3>
+            <p>
+              Depending on your location, you may have rights to access, correct, or delete your personal information.
+              You can request help by emailing
+              <a href="mailto:contact@xylenexdev.com">contact@xylenexdev.com</a>.
+            </p>
+
+            <h3>8. Contact</h3>
+            <p>
+              <strong>XYLENEX SIA</strong><br />
+              Mazā Smilšu iela 8, Centra rajons, Rīga, LV-1050<br />
+              Email: <a href="mailto:contact@xylenexdev.com">contact@xylenexdev.com</a><br />
+              Phone: <a href="tel:+37126205676">+371 26205676</a>
+            </p>
+
+            <p class="muted small">Last updated: <span id="privacyUpdated"></span></p>
+          </div>
+        </div>
+      </section>
+
+      <!-- DEVELOPER / WEBSITE TERMS -->
+      <section id="developer-terms" class="section alt">
+        <div class="container">
+          <div class="section-head">
+            <h2>Terms of Service (Website & Developer)</h2>
+            <p class="muted">
+              These terms govern use of this website and general interactions with XYLENEX SIA. App-specific terms may
+              exist separately.
+            </p>
+          </div>
+
+          <div class="policy">
+            <h3>1. Acceptance</h3>
+            <p>
+              By using this website, you agree to these Terms. If you do not agree, do not use the website.
+            </p>
+
+            <h3>2. Use of the website</h3>
+            <ul class="bullets">
+              <li>You will use the site lawfully and not attempt to disrupt or abuse it.</li>
+              <li>You will not try to access non-public areas of our systems.</li>
+              <li>You will not copy or misuse the site content without permission.</li>
+            </ul>
+
+            <h3>3. Intellectual property</h3>
+            <p>
+              The website design, logos, branding, and content are owned by XYLENEX SIA unless otherwise stated.
+            </p>
+
+            <h3>4. Third-party links</h3>
+            <p>
+              The website may link to third-party websites (including Google Play). We are not responsible for their
+              content or practices.
+            </p>
+
+            <h3>5. Disclaimer</h3>
+            <p>
+              This website is provided “as is” without warranties of any kind. We do not guarantee uninterrupted access.
+            </p>
+
+            <h3>6. Limitation of liability</h3>
+            <p>
+              To the maximum extent permitted by law, XYLENEX SIA is not liable for indirect, incidental, or
+              consequential damages arising from use of this website.
+            </p>
+
+            <h3>7. Changes</h3>
+            <p>
+              We may update these Terms at any time by posting changes on this page. Continued use means you accept the
+              updated Terms.
+            </p>
+
+            <h3>8. Contact</h3>
+            <p>
+              <strong>XYLENEX SIA</strong><br />
+              Mazā Smilšu iela 8, Centra rajons, Rīga, LV-1050<br />
+              Email: <a href="mailto:contact@xylenexdev.com">contact@xylenexdev.com</a><br />
+              Phone: <a href="tel:+37126205676">+371 26205676</a>
+            </p>
+
+            <p class="muted small">Last updated: <span id="termsUpdated"></span></p>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <!-- FOOTER -->
+    <footer class="footer">
+      <div class="container footer-grid">
+        <div>
+          <div class="brand footer-brand">
+            <span class="logo" aria-hidden="true">X</span>
+            <span class="brand-text">XYLENEX SIA</span>
+          </div>
+          <p class="muted">
+            Official developer website for XYLENEX SIA (Google Play Developer ID: 5097653683382524442).
+          </p>
+        </div>
+
+        <div class="footer-links">
+          <a href="#examhero">ExamHero</a>
+          <a href="#about">About</a>
+          <a href="#contact">Contact</a>
+          <a href="#developer-privacy">Privacy</a>
+          <a href="#developer-terms">Terms</a>
+        </div>
+
+        <div class="muted small right">
+          © <span id="year"></span> XYLENEX SIA<br />
+          Mazā Smilšu iela 8, Centra rajons, Rīga, LV-1050<br />
+          Phone: <a href="tel:+37126205676">+371 26205676</a><br />
+          Email: <a href="mailto:contact@xylenexdev.com">contact@xylenexdev.com</a><br />
+          Website: <a href="https://xylenexdev.com" target="_blank" rel="noopener">xylenexdev.com</a>
+        </div>
+      </div>
+    </footer>
+
+    <script>
+      const today = new Date().toLocaleDateString();
+      document.getElementById("year").textContent = new Date().getFullYear();
+      document.getElementById("privacyUpdated").textContent = today;
+      document.getElementById("termsUpdated").textContent = today;
+    </script>
+  </body>
+</html>
